Aligned images and fixed errors in text

--- a/02-Web-Fundemantals/web-project/_base.scss
+++ b/02-Web-Fundemantals/web-project/_base.scss
@@ -1,8 +1,8 @@
-
-
 $app-font: "Lato", sans-serif;
 $dark-blue: RGB(60, 65, 110);
 $light-blue:RGB(35, 185, 250);
+
+*{margin-top: 5%;}
 
 .dark-blue{
     color:$dark-blue;
