--- a/02-Web-Fundemantals/web-project/_components.scss
+++ b/02-Web-Fundemantals/web-project/_components.scss
@@ -31,7 +31,7 @@
               padding-right: 45px;            
           }
       }       
-      }
+    }
   
       .section2{
         font-size: 1.5em;
@@ -53,7 +53,8 @@
       color:aquamarine;
       padding-top: 5px;
   
-      
+        .grid-section{
+          width: 100%;
   
         .grid_container{
           display: grid;
@@ -70,18 +71,14 @@
           padding: 20px;
           font-size: 1.5em;
           text-align: center;
+          margin-right: 5px;
         }  
-  
-        .grid-item-right {
-          background-color: rgba(255, 255, 255, 0.8);
-          padding: 20px;
-          font-size: 2em;
-          text-align: right;
-        }  
+   
   
         .text{
           display:inline;
         }
+
         .bold{
           font-weight: bold;
           display:inline;
@@ -90,6 +87,7 @@
         .thin-italic{
           font-style: italic;
           display:inline;
+        }
         }
   
         .button{
@@ -104,7 +102,8 @@
           font-weight: bold;
           font-size: 1.2em;
       }
-      }
+      
+    }
   
       footer{
         background-color:RGB(255, 252, 221);
